--- a/face_detection.ipynb
+++ b/face_detection.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyPQ7GtV9DeaunjtHLIAlU30"
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
@@ -38,7 +37,7 @@
         "id": "-1GPz1QEIO11",
         "outputId": "4dcf115f-38f3-43e2-8252-8aee831e7e0f"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -70,7 +69,7 @@
       "metadata": {
         "id": "NL1mPBy1Q9tB"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -118,7 +117,7 @@
         "id": "U3VziPI1Q9qh",
         "outputId": "74bd40d8-d2e9-4d77-c9cb-4ef555f06d89"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,7 +280,7 @@
         "id": "-A8kJmQqQ9lK",
         "outputId": "6dc448af-b342-47b2-e613-87fd786ecd6e"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
