--- a/smile_detection.ipynb
+++ b/smile_detection.ipynb
@@ -218,7 +218,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "id": "zuZWtLckhWYv"
       },
@@ -240,8 +240,7 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMQfVJ50B6c6olaWBagLyQw"
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
